<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="common_question_head">常见问题</string>
    <string name="common_load_question">正在加载常见问题</string>
    <string name="common_load_question_list">正在加载问题列表</string>
    <string name="common_load_result_failure">加载失败，请检查网络设置。</string>
    <string name="common_load_connect_timeout">网络连接超时，请检查网络设置。</string>
    <string name="common_detail_meet_empty_head">查看的常见问题类型为空</string>
    <string name="common_detail_meet_empty_url">查看的常见问题的类型id不正确</string>
    <string name="attachment_download">附件下载</string>
    <string name="attachment_download_normal">确定要下载附件%s？</string>
    <string name="attachment_download_running">附件%s正在下载，是否需要重新下载？</string>
    <string name="attachment_download_pause">附件%s下载被暂停，是否需要继续下载？</string>
    <string name="attachment_download_exist">您已经下载过附件%s，需要重新下载一遍进行覆盖吗？</string>
    <string name="attachment_url_resolve_failure">解析附件下载地址失败</string>
    <string name="warn_dialog_title">温馨提示</string>
    <string name="warn_dialog_messg">省流量模式在非wifi环境下自动为您节省流量提升体验。是否进行设置？</string>
    <string name="warn_dialog_positive">设置</string>
    <string name="warn_dialog_cancel">取消</string>
    <string name="save_setting_hide_user">不显示头像</string>
    <string name="save_setting_hide_csel">不显示轮播图</string>
    <string name="save_setting_hide_post">不加载话题图片</string>
    <string name="save_setting_hide_apps">不显示软件介绍图</string>
    <string name="post_content_pic_quality">图片浏览设置</string>
    <string name="post_content_pic_default_quality_title">智能浏览</string>
    <string name="post_content_pic_default_quality_second_title">(默认)</string>
    <string name="post_content_pic_default_quality_msg">wifi网络加载大图，其他网络加载小图</string>
    <string name="post_content_pic_high_quality_title">大图</string>
    <string name="post_content_pic_high_quality_msg">所有网络加载大图</string>
    <string name="post_content_pic_low_quality_title">小图</string>
    <string name="post_content_pic_low_quality_msg">所有网络加载小图</string>
    <string name="post_content_pic_no_quality_title">无图</string>
    <string name="post_content_pic_no_quality_msg">所有网络不加载图片</string>
    <string name="post_content_upload_pic_quality">上传图片质量</string>
    <string name="post_content_upload_pic_quality_original">原图</string>
    <string name="post_content_upload_pic_quality_original_msg">建议在wifi网络下使用</string>
    <string name="post_content_upload_pic_quality_high">高清</string>
    <string name="post_content_upload_pic_quality_high_msg">建议在网络较快的情况下使用</string>
    <string name="post_content_upload_pic_quality_low">普通</string>
    <string name="setting_collect_title">收藏夹</string>
    <string name="setting_collect_msg">VIP注册获得更多乐园权限</string>
    <string name="setting_vip_register_title">VIP注册</string>
    <string name="setting_vip_register_msg">VIP注册获得更多乐园权限</string>
    <string name="setting_autopush_title">是否接受后台消息通知</string>
    <string name="setting_autopush_messg">推送消息、角标提醒，会消耗少量流量</string>
    <string name="setting_iconremind_title">桌面图标提醒</string>
    <string name="setting_iconremind_messg">开启后有回复时会在桌面图标提醒</string>
    <string name="setting_hideimag_title">省流量设置</string>
    <string name="setting_hideimag_messg">根据不同网络选择浏览模式，以节省流量</string>
    <string name="setting_fontcize_title">字体大小</string>
    <string name="setting_fontcize_messg">内容中字体大小的调节</string>
    <string name="setting_cleancache_title">清除缓存</string>
    <string name="setting_cleancache_messg">清除应用缓存的临时文件</string>
    <string name="Setting_cleancache_dialog_messg">确定清除缓存文件？</string>
    <string name="cleancache_progress_dialog_cleaning">正在清除缓存</string>
    <string name="cleancache_progress_dialog_toast">成功清除缓存</string>
    <string name="setting_aboutapp_title">关于</string>
    <string name="setting_aboutapp_messg">OPPO乐园相关信息</string>
    <string name="setting_autoloadmore_title">列表自动加载更多</string>
    <string name="setting_autoloadmore_messg">滑动到底部自动加载更多内容</string>
    <string name="setting_use_inner_browser_title">使用内置浏览器</string>
    <string name="setting_use_inner_browser_messg">默认使用内置浏览器打开链接</string>
    <string name="token_sign_out_title">注销提示</string>
    <string name="token_sign_out_messg">请跳转到OPPO帐号中心注销该帐号</string>
    <string name="token_sign_in_warm_title">帐号提醒</string>
    <string name="token_sign_in_warm_messg_default">检测到个人中心有已经登录的帐号，使用此帐号快速登录。</string>
    <string name="token_sign_in_warm_messg_user">检测到个人中心已经登录的帐号%s，使用此帐号快速登录。</string>
    <string name="token_sign_in_result_success">快速登录成功</string>
    <string name="token_sign_in_result_failure">快速登录失败</string>
    <string name="sign_in_prepare_header_title">温馨提示</string>
    <string name="sign_in_prepare_exist_user_hint">您已经登录OPPO帐号，确定使用该帐号快速登录？</string>
    <string name="sign_in_prepare_load_user_name_hint">正在获取用户名</string>
    <string name="sign_in_prepare_quick_sign_in">快速登录</string>
    <string name="sign_in_prepare_use_other_users">使用其他帐号登录</string>
    <string name="sign_in_prepare_register_user">注册</string>
    <string name="sign_in_prpare_toast_no_signed_user">没有检测到登录的OPPO帐号</string>
    <string name="sign_in_prepare_load_failure">获取用户名失败，请检查网络！</string>
    <string name="sign_in_prepare_quick_sign_title">正在使用OPPO帐号快速登录</string>
    <string name="sign_in_prepare_bottom_hint">小提醒：OPPO帐号可以登录OPPO官网、OPPO乐园、丽人等OPPO相关产品。</string>
    <string name="network_traffic_save_tip_wifi">你当前为WIFI网络，已为你关闭省流量模式。</string>
    <string name="network_traffic_save_tip_2g">你当前为2G网络，已为你开启省流量模式，请到设置中心设置省流量类型。</string>
    <string name="network_traffic_save_tip_3g">你当前为3G网络，已为你开启省流量模式，请到设置中心设置省流量类型。</string>
    <string name="attract_service_ticker_text">OPPO乐园提醒</string>
    <string name="attract_service_content_title_never">乐园提醒</string>
    <string name="attract_service_content_text_never">好友空间有新动态了，来看看吧</string>
    <string name="attract_service_content_title_five">乐园提醒</string>
    <string name="attract_service_content_text_five">好友空间有新动态了，来看看吧</string>
    <string name="attract_service_content_title_ten">乐园提醒</string>
    <string name="attract_service_content_text_ten">好友空间有新动态了，来看看吧</string>
    <string name="attract_service_content_title_thirty">乐园提醒</string>
    <string name="attract_service_content_text_thirty">好友空间有新动态了，来看看吧</string>
    <string name="post_reply_load_error_toast">链接超时或者话题已删除</string>
    <string name="email_reg_des">提示:输入邮箱收取的激活码或登录您的注册邮箱,点击激活链接完成帐号注册。</string>
    <string name="sms_reg_des">提示:输入系统免费发送到您手机的验证码，点击下一步完成帐号注册。乐园推荐采用此方式注册帐号。</string>
    <string name="email_reg">邮箱注册</string>
    <string name="sms_reg">短信注册</string>
    <string name="input_account">请输入登录帐号</string>
    <string name="input_secret">请输入登录密码</string>
    <string name="time_error">系统时间错误,请重新设置系统时间</string>
    <string name="account_or_secret_error">用户名或者密码错误</string>
    <string name="account_not_activated_error">"登录失败，帐号未激活
请登陆注册邮箱激活帐号"</string>
    <string name="unknow_error">网络连接错误，登录失败</string>
    <string name="login_fail_net_error">网络异常或不支持，无法登录。</string>
    <string name="login_get_userinfo_error">"登录后获取个人数据出错
请检查网络后重新登录！"</string>
    <string name="view_click"><u>点击查看</u></string>
    <string name="back">返回</string>
    <string name="intput_account_info">请输入您的帐号信息</string>
    <string name="account">帐号</string>
    <string name="secret">密码</string>
    <string name="forget_secret"><u>忘记密码</u></string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="tip_use_official_account">使用OPPO官网帐号、可可帐号登录乐园，享受更多服务。</string>
    <string name="delete_account_dialog_title">删除帐号</string>
    <string name="delete_account_dialog_msg">确定删除帐号：%s？</string>
    <string name="email_address">Email地址</string>
    <string name="phone">手机号码</string>
    <string name="confirm_secret">确认密码</string>
    <string name="change_picture">看不清?换张图</string>
    <string name="change_question">"点此
换个问题"</string>
    <string name="approve_register_procotol">已同意注册协议</string>
    <string name="activation">激活码</string>
    <string name="login_account_hint">用户名/邮箱/手机</string>
    <string name="account_hint">可用2~16个英文字符、数字或8个纯中文字符</string>
    <string name="emailOrPhone_hint">请输入邮箱地址</string>
    <string name="secret_hint">输入6~16位字母、数字、下划线</string>
    <string name="secret_second_hint">请再次输入密码</string>
    <string name="vifycode_hint">请输入验证码</string>
    <string name="vifyquestion_hint">请输入答案</string>
    <string name="register_have_logined">该帐号已存在</string>
    <string name="cannot_read_cookie">无法读取cookie</string>
    <string name="vifycode_error">验证码错误</string>
    <string name="account_null">用户名为空</string>
    <string name="secret_not_regular">密码不符合规则</string>
    <string name="secret_not_agreed">两次密码不一样</string>
    <string name="op_share_effectcategory">Effect Category</string>
    <string name="op_share_effectintroductiontitle">Effect Introduction</string>
    <string name="op_share_share">Share</string>
    <string name="op_choose_soundtype_title">Choose effect category</string>
    <string name="take_pic_by_camera">拍照</string>
    <string name="take_pic_by_album">从相册中选取</string>
    <string name="take_pic_by_cancel">取消</string>
    <string name="share">Save</string>
    <string name="cancel">cancel</string>
    <string name="diaodiao">Shared Zone</string>
    <string name="custom">Mixer</string>
    <string name="myconfig">My Collection</string>
    <string name="current_adaptive_earphone">Current Adaptive Earphone</string>
    <string name="more_introduction">No more than 140 words</string>
    <string name="nameing">Title</string>
    <string name="more_setting">setting</string>
    <string name="str_31">31</string>
    <string name="str_63">45</string>
    <string name="str_125">62</string>
    <string name="str_160">90</string>
    <string name="str_200">125</string>
    <string name="str_250">180</string>
    <string name="str_315">250</string>
    <string name="str_400">375</string>
    <string name="str_500">500</string>
    <string name="str_630">750</string>
    <string name="str_800">1k</string>
    <string name="str_1k">1.5k</string>
    <string name="str_2k">4k</string>
    <string name="str_4k">12k</string>
    <string name="str_5k">16k</string>
    <string name="history">history</string>
    <string name="empty">empty</string>
    <string name="history_info">earphone is AKG</string>
    <string name="soundeffect_switch">Soundeffect Switch</string>
    <string name="my_custom">My Mixer</string>
    <string name="category_unknow">Unknow</string>
    <string name="category_pop">Pop</string>
    <string name="category_rock">Rock</string>
    <string name="category_piping">Piping</string>
    <string name="category_bass">Bass</string>
    <string name="category_jazz">Jazz</string>
    <string name="category_classical">Classical</string>
    <string name="category_dance">Dance</string>
    <string name="category_ballad">Ballad</string>
    <string name="category_voice">Voice</string>
</resources>