<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_31" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_63" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_125" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_160" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_200" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_250" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_315" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_400" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_500" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_630" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_800" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_1k" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_1.25k" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_1.6k" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_2k" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_2.5k" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_3.15k" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_4k" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_5k" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/scale_text_size" android:textColor="@color/scale_text_color" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_6.3k" android:layout_weight="1.0" />
</LinearLayout>