<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/content_padding" android:paddingRight="@dimen/content_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.oneplus.tuner.view.PersonalView android:id="@id/personal_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:gravity="center|left" android:id="@id/myconfig" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/line_height" android:text="@string/myconfig" style="@style/content_text" />
        <TextView android:gravity="center|left" android:id="@id/my_custom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/line_height" android:text="@string/my_custom" style="@style/content_text" />
        <TextView android:gravity="center|left" android:id="@id/custom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/line_height" android:text="@string/custom" style="@style/content_text" />
        <Switch android:gravity="center|left" android:id="@id/soundeffect_switch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/line_height" android:text="@string/soundeffect_switch" style="@style/content_text" />
        <TextView android:gravity="center|left" android:id="@id/setting" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/line_height" android:text="@string/more_setting" style="@style/content_text" />
    </LinearLayout>
</ScrollView>