<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.oneplus.tuner.view.LabelView android:textColor="#ff000000" android:gravity="center" android:background="#ffc0c0c0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/category_unknow" android:layout_weight="1.0" />
            <com.oneplus.tuner.view.LabelView android:textColor="#ff000000" android:gravity="center" android:background="#ffc0c0c0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/category_pop" android:layout_weight="1.0" />
            <com.oneplus.tuner.view.LabelView android:textColor="#ff000000" android:gravity="center" android:background="#ffc0c0c0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="8.0dip" android:text="@string/category_rock" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.oneplus.tuner.view.LabelView android:textColor="#ff000000" android:gravity="center" android:background="#ffc0c0c0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/category_piping" android:layout_weight="1.0" />
            <com.oneplus.tuner.view.LabelView android:textColor="#ff000000" android:gravity="center" android:background="#ffc0c0c0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/category_bass" android:layout_weight="1.0" />
            <com.oneplus.tuner.view.LabelView android:textColor="#ff000000" android:gravity="center" android:background="#ffc0c0c0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="8.0dip" android:text="@string/category_jazz" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.oneplus.tuner.view.LabelView android:textColor="#ff000000" android:gravity="center" android:background="#ffc0c0c0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/category_classical" android:layout_weight="1.0" />
            <com.oneplus.tuner.view.LabelView android:textColor="#ff000000" android:gravity="center" android:background="#ffc0c0c0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/category_dance" android:layout_weight="1.0" />
            <com.oneplus.tuner.view.LabelView android:textColor="#ff000000" android:gravity="center" android:background="#ffc0c0c0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="8.0dip" android:text="@string/category_ballad" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.oneplus.tuner.view.LabelView android:textColor="#ff000000" android:gravity="center" android:background="#ffc0c0c0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="16.0dip" android:text="@string/category_voice" android:layout_weight="1.0" />
            <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="16.0dip" android:layout_weight="1.0" />
            <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>